<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".JournalActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="32sp"
        android:text="@string/sepsis_journal_question" />

    <RadioGroup
        android:id="@+id/journal_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_not_anxious"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_not_anxious" />

        <RadioButton
            android:id="@+id/radio_anxious"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_anxious" />

        <RadioButton
            android:id="@+id/radio_hyperaware"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_hyperaware" />

        <RadioButton
            android:id="@+id/radio_something_wrong"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_something_wrong" />

        <RadioButton
            android:id="@+id/radio_doom"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_doom" />
    </RadioGroup>

    <Button
        android:id="@+id/show_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_answer_button" />

</LinearLayout>